z-index fixes (hopefully)

--- a/style/main.css
+++ b/style/main.css
@@ -29,7 +29,7 @@ body {
 			-moz-box-shadow:    0px 3px 5px rgba(0,0,0,0.3);
 			-webkit-box-shadow: 0px 3px 5px rgba(0,0,0,0.3);
 			box-shadow:         0px 3px 5px rgba(0,0,0,0.3);
-			z-index: 100;
+			z-index: 5000;
 			
 		}
 
@@ -430,7 +430,7 @@ body {
 		right: 0px;
 		bottom: 0px;
 		background-color: rgba(0,0,0,0.8);
-		z-index: 400;
+		z-index: 6000;
 
 	}
 	
@@ -442,7 +442,7 @@ body {
 			top: 120px;
 			right: 120px;
 			border: 1px solid #ddd;
-			z-index: 250;
+			z-index: 6010;
 			padding: 20px 50px;
 			-webkit-border-radius: 4px;
 			-moz-border-radius: 4px;
@@ -469,7 +469,7 @@ body {
 		right: 0px;
 		bottom: 0px;
 		background-color: rgba(0,0,0,0.8);
-		z-index: 400;
+		z-index: 6000;
 
 	}
 	
@@ -482,7 +482,7 @@ body {
 			right: 120px;
 			bottom: 20px;
 			border: 1px solid #ddd;
-			z-index: 250;
+			z-index: 6010;
 			padding: 20px;
 			-webkit-border-radius: 4px;
 			-moz-border-radius: 4px;
@@ -524,7 +524,7 @@ body {
 		right: 0px;
 		bottom: 0px;
 		background-color: rgba(0,0,0,0.8);
-		z-index: 400;
+		z-index: 6000;
 
 	}
 
@@ -537,7 +537,7 @@ body {
 			right: 120px;
 			bottom: 20px;
 			border: 1px solid #ddd;
-			z-index: 250;
+			z-index: 6010;
 			padding: 20px;
 			-webkit-border-radius: 4px;
 			-moz-border-radius: 4px;
@@ -617,7 +617,7 @@ body {
 		bottom: 0px;
 		background-color: rgba(0,0,0,0.9);
 		color: #fff;
-		z-index: 200;
+		z-index: 7000;
 		
 	}
 	
@@ -630,7 +630,7 @@ body {
 			right: 20px;
 			bottom: 20px;
 			border: 1px solid #000;
-			z-index: 250;
+			z-index: 7010;
 			padding: 5px;
 			-webkit-border-radius: 4px;
 			-moz-border-radius: 4px;
@@ -728,7 +728,7 @@ body {
 			bottom: 65px;
 			border: 1px solid #666;
 			border-top-width: 0px;
-			z-index: 250;
+			z-index: 7020;
 			overflow-y: scroll;
 			
 		}
@@ -781,7 +781,7 @@ body {
 			left: 10px;
 			right: 30px;
 			bottom: 55px;
-			z-index: 300;
+			z-index: 8000;
 			
 		}
 		
@@ -794,7 +794,7 @@ body {
 			right: 0px;
 			height: 40px;
 			padding: 10px;
-			z-index: 300;
+			z-index: 7050;
 			border-top: 1px solid #666;
 			background-color: #2f2f2f;
 			-webkit-border-bottom-right-radius: 4px;
